--- a/etcd/简单使用.md
+++ b/etcd/简单使用.md
@@ -1,14 +1,12 @@
 ```shell
 //设置或更新值
-etcdctl put name
-张二
+etcdctl put name 维普雷
 //获取值
 etcdctl get name
 //只要value
 etcdctl get name --print-value-only
 //获取name前缀的键值对
-etcdctl get
---prefix name
+etcdctl get --prefix name
 //删除键值对
 etcdctl del name
 //监听键的变化
