--- a/etcd/简单使用.md
+++ b/etcd/简单使用.md
@@ -12,3 +12,38 @@ etcdctl del name
 //监听键的变化
 etcdctl watch name
 ```
+### 查看 etcd 中的所有键值
+
+查看所有键：
+```shell
+etcdctl get --prefix ""
+```
+这将列出 etcd 中的所有键。--prefix 参数指定键的前缀，空字符串表示匹配所有键。
+
+查看指定前缀的键：
+```shell
+etcdctl get --prefix "/myapp"
+```
+这将列出以 /myapp 为前缀的所有键。
+
+查看键值对：
+```shell
+etcdctl get --prefix "" --print-value-only
+```
+这将列出所有键值对，--print-value-only 参数表示同时打印键的值。
+
+查看键的详细信息：
+```shell
+etcdctl get --prefix "" -w json
+```
+这将以 JSON 格式显示所有键的详细信息，包括创建时间、修改时间、版本号等。
+
+查看键的历史版本：
+```shell
+etcdctl get --prefix "" --rev=0
+```
+这将列出所有键的历史版本，--rev 参数指定版本号，0 表示最初的版本。
+
+> 注意：以上命令假设你已经正确配置了 etcdctl，并且可以连接到 etcd 集群。如果需要指定 etcd 的端点或认证信息，可以通过额外的参数或环境变量进行配置。  
+> 例如，如果 etcd 的端点为 http://localhost:2379 ，可以使用以下命令：  
+> etcdctl --endpoints=http://localhost:2379 get --prefix ""
