--- a/etcd/简单使用.md
+++ b/etcd/简单使用.md
@@ -26,11 +26,10 @@ etcdctl get --prefix "/myapp"
 ```
 这将列出以 /myapp 为前缀的所有键。
 
-查看键值对：
+查看值：
 ```shell
 etcdctl get --prefix "" --print-value-only
 ```
-这将列出所有键值对，--print-value-only 参数表示同时打印键的值。
 
 查看键的详细信息：
 ```shell
