--- a/etcd/简单使用.md
+++ b/etcd/简单使用.md
@@ -17,6 +17,7 @@ etcdctl watch name
 查看所有键：
 ```shell
 etcdctl get --prefix ""
+etcdctl --endpoints=http://10.0.0.22:2379 get --prefix ""
 ```
 这将列出 etcd 中的所有键。--prefix 参数指定键的前缀，空字符串表示匹配所有键。
 
